@@ -289,6 +289,23 @@
             },
             "WTF.WorkerPoolDecrease": {
                 "expected": {"gtk": {"status": ["TIMEOUT", "PASS"], "bug": "webkit.org/b/214803"}}
+            },
+            "WTF_DataMutex.DoubleLockDeathTest": {
+                "expected": {"gtk": {"status": ["TIMEOUT"], "bug": "webkit.org/b/227021"}}
+            }
+        }
+    },
+    "TestContextMenu": {
+        "subtests": {
+            "/webkit/WebKitWebPage/context-menu": {
+                "expected": {
+                    "gtk": {"status": ["FAIL"], "bug": "webkit.org/b/227020"}
+                }
+            },
+            "/webkit/WebKitWebPage/context-menu-node": {
+                "expected": {
+                    "gtk": {"status": ["FAIL"], "bug": "webkit.org/b/227020"}
+                }
             }
         }
     },
